# ailab

./: .gitignore  pyproject.toml
AiLab/: app.db  config.py  config_BACKUP_332.py  config_BASE_332.py  config_REMOTE_332.py  manage.py  requirements.txt  run.py
AiLab/app/: __init__.py  extensions.py  forms.py  funcs.py  models.py  routes.py
AiLab/app/AI/: TechTool.py  Tools.py  __init__.py  ai.py
AiLab/app/auth/: __init__.py  routes.py
AiLab/app/base/: __init__.py  config.py  forms.py  funcs.py  models.py  routes.py
AiLab/app/filetree/: __init__.py  routes.py
AiLab/app/friendship/: __init__.py  routes.py
AiLab/app/ide/: __init__.py  routes.py  socketio_events.py
AiLab/app/messanger/: __init__.py  ai_routes.py  routes.py
AiLab/app/profile/: __init__.py  routes.py
AiLab/migrations/versions/: 432fceb10a2b_.py  4e24c4b0cc4c_messages.py  5999005b2fd3_messages.py  (+7 more)
AiLab/templates/: base.html  friend_requests.html  login.html  messenger_chat.html  messenger_contacts.html  profile.html  register.html
Tests/Profile/: profile.html  script.js  styles.css
Tests/Scripts/: sumRang.py  tree.py
Tests/Test_15.03.2025/: app.db  run.py
Tests/chat project/: app.py
Tests/messenger/: index.html  script.js  style.css  styles.css
docs/Reports/: NPD-28-05-2025.docx
docs/adr/: adr-001.md
docs/Отчеты/: GPO_26.12.24_UVV.docx  ~$O_26.12.24_UVV.docx  ~$Д-27-05-2025.docx  ~$О-27-05-2025.docx  ГПО-27-05-2025.docx  Курсовая_Усанов_ЦУиМ_2025.docx  НПД-27-05-2025.docx  ПП_10.03.25_UVV.doc
Архивы/: Prod-20.03.2025.7z
Отчеты AiLab/: Отчет по практике 2025.doc
(+63 files in other folders)
